updated package version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,8 @@ export(DRM.QE4_NI)
 export(DRM.QE4_Q)
 export(DRMQ)
 export(DR_scatter)
+export(LNtoN)
+export(NtoLN)
 export(PREP_DATA_LN)
 export(PREP_DATA_N)
 export(PREP_DATA_QA)
@@ -167,5 +169,6 @@ import(numDeriv)
 import(posterior)
 import(rstan)
 import(rstantools)
+import(shiny)
 importFrom(rstan,sampling)
 useDynLib(BMABMDR, .registration = TRUE)
