--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BMABMDR
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9012
+Version: 0.0.0.9013
 Authors@R: 
     person(given = "First",
            family = "Last",
@@ -19,6 +19,7 @@ Depends:
     R (>= 3.4.0)
 Imports: 
     methods,
+    shiny,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
