--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,19 @@ Imports:
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
-    rstantools (>= 2.1.1)
+    rstantools (>= 2.1.1),
+    AICcmodavg,
+    RColorBrewer,
+    bbmle,
+    bridgesampling,
+    forcats,
+    gamlss,
+    ggplot2,
+    ggpubr,
+    mc2d,
+    mvtnorm,
+    numDeriv,
+    posterior
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
@@ -31,4 +43,6 @@ LinkingTo:
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
     StanHeaders (>= 2.18.0)
+Suggests:
+    testthat    
 SystemRequirements: GNU make
