added truncnorm package to imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,5 +169,6 @@ import(numDeriv)
 import(posterior)
 import(rstan)
 import(rstantools)
+import(shiny)
 importFrom(rstan,sampling)
 useDynLib(BMABMDR, .registration = TRUE)
