--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BMABMDR
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9012
+Version: 0.0.0.9013
 Authors@R: 
     person(given = "First",
            family = "Last",
@@ -19,10 +19,23 @@ Depends:
     R (>= 3.4.0)
 Imports: 
     methods,
+    shiny,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
-    rstantools (>= 2.1.1)
+    rstantools (>= 2.1.1),
+    AICcmodavg,
+    RColorBrewer,
+    bbmle,
+    bridgesampling,
+    forcats,
+    gamlss,
+    ggplot2,
+    ggpubr,
+    mc2d,
+    mvtnorm,
+    numDeriv,
+    posterior
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
@@ -30,4 +43,6 @@ LinkingTo:
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
     StanHeaders (>= 2.18.0)
+Suggests:
+    testthat    
 SystemRequirements: GNU make
