--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     mc2d,
     mvtnorm,
     numDeriv,
-    posterior
+    posterior,
+    truncnorm
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
