--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,22 +52,28 @@ export(DR_scatter)
 export(LNtoN)
 export(NtoLN)
 export(PREP_DATA_LN)
+export(PREP_DATA_LN_C)
 export(PREP_DATA_N)
+export(PREP_DATA_N_C)
 export(PREP_DATA_QA)
 export(anydoseresponseLN)
 export(anydoseresponseN)
 export(anydoseresponseQ)
 export(bartlett)
 export(convergence_deci)
+export(convergence_deciC)
 export(density_BMD)
 export(expit)
 export(flat)
 export(full.laplaceQ_MA)
 export(full.laplace_MA)
+export(full.laplace_MAc)
 export(fun.alpha)
 export(fun.beta)
 export(fun_optim)
+export(fun_optimC)
 export(fun_sampling)
+export(fun_samplingC)
 export(fun_samplingQ)
 export(get_models)
 export(is.BMADR)
@@ -78,60 +84,96 @@ export(is.stanfit)
 export(is.stanfitOptim)
 export(llfE42_Q)
 export(llfE4_LND)
+export(llfE4_LNDc)
 export(llfE4_LNI)
+export(llfE4_LNIc)
 export(llfE4_ND)
+export(llfE4_NDc)
 export(llfE4_NI)
+export(llfE4_NIc)
 export(llfE4_Q)
 export(llfG42_Q)
 export(llfG4_LND)
+export(llfG4_LNDc)
 export(llfG4_LNI)
+export(llfG4_LNIc)
 export(llfG4_ND)
+export(llfG4_NDc)
 export(llfG4_NI)
+export(llfG4_NIc)
 export(llfG4_Q)
 export(llfH42_Q)
 export(llfH4_LND)
+export(llfH4_LNDc)
 export(llfH4_LNI)
+export(llfH4_LNIc)
 export(llfH4_ND)
+export(llfH4_NDc)
 export(llfH4_NI)
+export(llfH4_NIc)
 export(llfH4_Q)
 export(llfIE42_Q)
 export(llfIE4_LND)
+export(llfIE4_LNDc)
 export(llfIE4_LNI)
+export(llfIE4_LNIc)
 export(llfIE4_ND)
+export(llfIE4_NDc)
 export(llfIE4_NI)
+export(llfIE4_NIc)
 export(llfIE4_Q)
 export(llfL42_Q)
 export(llfL4_LND)
+export(llfL4_LNDc)
 export(llfL4_LNI)
+export(llfL4_LNIc)
 export(llfL4_ND)
+export(llfL4_NDc)
 export(llfL4_NI)
+export(llfL4_NIc)
 export(llfL4_Q)
 export(llfLN42_Q)
 export(llfLN4_LND)
+export(llfLN4_LNDc)
 export(llfLN4_LNI)
+export(llfLN4_LNIc)
 export(llfLN4_ND)
+export(llfLN4_NDc)
 export(llfLN4_NI)
+export(llfLN4_NIc)
 export(llfLN4_Q)
 export(llfP42_Q)
 export(llfP4_LND)
+export(llfP4_LNDc)
 export(llfP4_LNI)
+export(llfP4_LNIc)
 export(llfP4_ND)
+export(llfP4_NDc)
 export(llfP4_NI)
+export(llfP4_NIc)
 export(llfP4_Q)
 export(llfQE42_Q)
 export(llfQE4_LND)
+export(llfQE4_LNDc)
 export(llfQE4_LNI)
+export(llfQE4_LNIc)
 export(llfQE4_ND)
+export(llfQE4_NDc)
 export(llfQE4_NI)
+export(llfQE4_NIc)
 export(llfQE4_Q)
 export(llfSM2_Q)
 export(llfSM_LN)
+export(llfSM_LNc)
 export(llfSM_N)
+export(llfSM_Nc)
 export(llfSM_Q)
 export(logit)
 export(modelTest)
+export(modelTestC)
 export(modelTestQ)
 export(outLP)
+export(outLPC)
 export(outLPQ)
 export(par_extract)
 export(par_med)
@@ -142,6 +184,7 @@ export(plot_BMD)
 export(plot_prior)
 export(plot_priorQ)
 export(posterior_diag)
+export(posterior_diagC)
 export(predict.BMADR)
 export(predict.BMADRQ)
 export(print.BMADR)
@@ -149,6 +192,7 @@ export(print.BMADRQ)
 export(rnd)
 export(samplingQ_MA)
 export(sampling_MA)
+export(sampling_MAc)
 export(summary.BMADR)
 export(summary.BMADRQ)
 export(weightsQ_extract)
@@ -169,5 +213,6 @@ import(numDeriv)
 import(posterior)
 import(rstan)
 import(rstantools)
+import(shiny)
 importFrom(rstan,sampling)
 useDynLib(BMABMDR, .registration = TRUE)
