export summary function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -256,6 +256,7 @@ export(rnd)
 export(samplingQ_MA)
 export(sampling_MA)
 export(sampling_MAc)
+export(summarize.indiv.data)
 export(summary.BMADR)
 export(weightsQ_extract)
 export(weights_extract)
