--- a/NAMESPACE
+++ b/NAMESPACE
@@ -265,6 +265,7 @@ import(Rcpp)
 import(bayesplot)
 import(bbmle)
 import(bridgesampling)
+import(brms)
 import(dplyr)
 import(forcats)
 import(gamlss)
