--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BMABMDR
 Title: Bayesian Model Averaging for Benchmark Dose Analysis
-Version: 0.0.0.9046
+Version: 0.0.0.9047
 Authors@R: c(
     person(given = "C\'ecile",
            family = "Kremer",
@@ -45,6 +45,7 @@ Imports:
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
     rstantools (>= 2.1.1),
+    brms,
     RColorBrewer,
     bbmle,
     dplyr,
