--- a/.github/workflows/check_build_windows.yml
+++ b/.github/workflows/check_build_windows.yml
@@ -53,6 +53,7 @@ jobs:
           remotes::install_version("rstan", "2.21.8")
           remotes::install_version("StanHeaders", "2.21.0-7")
           remotes::install_version("brms", "2.20.1")
+        shell: Rscript {0}
       - name: set compiler flags
         if: ${{ inputs.rver != '4.0' }}
         run: |
