--- a/.github/workflows/check_build_windows.yml
+++ b/.github/workflows/check_build_windows.yml
@@ -43,14 +43,19 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ inputs.rver }}
+          extra-repositories: 'https://mc-stan.org/r-packages/'
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: |
-            any::pkgbuild
-            any::remotes
-            any::rstan@2.21.8
-            any::StanHeaders@2.21.0-7
-            any::brms@2.20.1
+          packages: |
+            pkgbuild
+            remotes
+            rstan@2.21.8
+            StanHeaders@2.21.0-7
+            brms@2.20.1
+          upgrade: 'FALSE'
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          upgrade: 'FALSE'
       - name: set compiler flags
         if: ${{ inputs.rver != '4.0' }}
         run: |
