--- a/.github/workflows/check_build_windows.yml
+++ b/.github/workflows/check_build_windows.yml
@@ -48,23 +48,23 @@ jobs:
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages: |
-            any::StanHeaders@2.21.0-7
-            any::rstan@2.21.8
-            any::brms@2.20.1
+            StanHeaders@2.21.0-7
+            rstan@2.21.8
+            brms@2.20.1
           upgrade: 'FALSE'
       - name: install specific version rstantools
         uses: r-lib/actions/setup-r-dependencies@v2
         if: ${{ inputs.rver != '4.0' && inputs.rver != '4.1' }}
         with:
           packages: |
-            any::rstantools@2.2.0
+            rstantools@2.2.0
           upgrade: 'FALSE'
       - name: install BMABMDR dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           upgrade: 'FALSE'
           extra-packages: |
-            any::pkgbuild
+            pkgbuild
       - name: set compiler flags
         if: ${{ inputs.rver != '4.0' && inputs.rver != '4.1' }}
         run: |
