--- a/.github/workflows/check_build_windows.yml
+++ b/.github/workflows/check_build_windows.yml
@@ -44,20 +44,24 @@ jobs:
         with:
           r-version: ${{ inputs.rver }}
           extra-repositories: 'https://mc-stan.org/r-packages/'
-      - name: install specific versions rstan, StanHeaders, brms
+      - name: install specific versions rstan, StanHeaders, brms, rstantools
+        if: ${{ inputs.rver != '4.0' && inputs.rver != '4.1' }}
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages: |
             StanHeaders@2.21.0-7
             rstan@2.21.8
             brms@2.20.1
+            rstantools@2.2.0
           upgrade: 'FALSE'
-      - name: install specific version rstantools
+      - name: install specific versions rstan, StanHeaders, brms
         uses: r-lib/actions/setup-r-dependencies@v2
-        if: ${{ inputs.rver != '4.0' && inputs.rver != '4.1' }}
+        if: ${{ inputs.rver == '4.0' || inputs.rver == '4.1' }}
         with:
           packages: |
-            rstantools@2.2.0
+            StanHeaders@2.21.0-7
+            rstan@2.21.8
+            brms@2.20.1
           upgrade: 'FALSE'
       - name: install BMABMDR dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
