--- a/.github/workflows/build_binary_ubuntu.yml
+++ b/.github/workflows/build_binary_ubuntu.yml
@@ -48,6 +48,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ inputs.rver }}
+          use-public-rspm: true
           extra-repositories: 'https://mc-stan.org/r-packages/'
       - name: install BMABMDR dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
