--- a/.github/workflows/action_macos.yml
+++ b/.github/workflows/action_macos.yml
@@ -12,7 +12,7 @@ jobs:
           - {source: true, binary: true, r: '4.3'}
           - {source: false, binary: true, r: '4.2'}
           - {source: false, binary: true, r: '4.1'}
-    uses: ./.github/workflows/macos.yml
+    uses: ./.github/workflows/build_binary_macos.yml
     with:
       rver: ${{ matrix.config.r}}
       build_source: ${{ matrix.config.source }}
