--- a/.github/workflows/build_binary_macos.yml
+++ b/.github/workflows/build_binary_macos.yml
@@ -58,7 +58,7 @@ jobs:
             # Set up R for x86_64
             R_ARCH="x86_64"
           fi
-          curl -o "R-$R_ARCH.pkg" "https://cran.r-project.org/bin/macosx/base/R-$R_ARCH.pkg"
+          curl -o "R-$R_ARCH.pkg" "https://cran.r-project.org/bin/macosx/big-sur-$R_ARCH/base/R-4.3.2-$R_ARCH.pkg"
           sudo installer -pkg "R-$R_ARCH.pkg" -target /
       - uses: r-lib/actions/setup-r@v2
         with:
