--- a/.github/workflows/build_binary_macos.yml
+++ b/.github/workflows/build_binary_macos.yml
@@ -32,8 +32,8 @@ on:
 
 jobs:
   check-upload:
-    runs-on: macos-latest
-    name: macos-latest (R-${{ inputs.rver }})
+    runs-on: macos-latest-xlarge
+    name: macos-latest-xlarge (R-${{ inputs.rver }})
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       R_VER: ${{ inputs.rver }}
