--- a/NAMESPACE
+++ b/NAMESPACE
@@ -272,6 +272,7 @@ import(mvtnorm)
 import(plyr)
 import(posterior)
 import(rstan)
+import(rstantools)
 import(shiny)
 import(truncnorm)
 importFrom(rstan,sampling)
