--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,6 @@
-# compiled files
-/*.so
-/*.o
-/*.dll
+.Rproj.user
 
-# project files
-*.project
-*.pydevproject
-*.prefs
-
-# History files
 .Rhistory
-.Rapp.history
-.Rproj.user
-
-# Session Data files
-.RData
-/acceleratedStability/.Renviron
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-/*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
-rsconnect/
-.Rproj.user
+BMABMDR_*.tar.gz
+BMABMDR.Rcheck
+/.project
