--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: BMABMDR
-Version: 0.0.0.9068
+Version: 0.0.0.9069
 Title: Bayesian Model Averaging for Benchmark Dose Analysis
 Authors@R: c(
     person(given = "C\'ecile",
@@ -43,6 +43,7 @@ Imports:
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
+    rstantools (>= 2.1.1),
     brms,
     RColorBrewer,
     dplyr,
@@ -55,6 +56,7 @@ Imports:
     mc2d,
     mvtnorm,
     posterior,
+    pracma,
     truncnorm
 LinkingTo: 
     BH (>= 1.66.0),
@@ -64,8 +66,7 @@ LinkingTo:
     rstan (>= 2.18.1),
     StanHeaders (>= 2.18.0)
 Suggests:
-    testthat (>= 3.0.0),
-    rstantools
+    testthat (>= 3.0.0)
 SystemRequirements: GNU make
 Config/testthat/edition: 3
 URL: https://github.com/cecilekremer/BMABMDR
