--- a/.github/workflows/action_unix.yml
+++ b/.github/workflows/action_unix.yml
@@ -1,4 +1,4 @@
-name: build-binary-windows
+name: build-binary-unix
 
 on:
   push:
@@ -15,11 +15,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {source: true, binary: true, r: '4.3'}
-          - {source: false, binary: true, r: '4.2'}
-          - {source: false, binary: true, r: '4.1'}
-    uses: ./.github/workflows/build_binary_windows.yml
+          - {os: ubuntu-22.04, source: false, binary: true, r: 'release'}
+          - {os: ubuntu-20.04, source: false, binary: true, r: 'release'}
+          - {os: macos-latest, source: false, binary: true, r: 'release'}
+    uses: ./.github/workflows/build_binary_unix.yml
     with:
+      os: ${{ matrix.config.os }}
       rver: ${{ matrix.config.r}}
       build_source: ${{ matrix.config.source }}
       build_binary: ${{ matrix.config.binary }}
