edit gh workflows + update gitignore

--- a/.github/workflows/action_windows.yml
+++ b/.github/workflows/action_windows.yml
@@ -1,8 +1,14 @@
 name: build-binary-windows
 
 on:
+  push:
+    branches:
+      - 'main'
+  pull_request:
+    branches:
+      - 'main'
   workflow_dispatch:
-
+  
 jobs:
   check-upload:
     strategy:
