--- a/.github/workflows/action_windows.yml
+++ b/.github/workflows/action_windows.yml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          - {source: true, binary: true, r: 'release'}
           - {source: true, binary: true, r: '4.3'}
           - {source: false, binary: true, r: '4.2'}
           - {source: false, binary: true, r: '4.1'}
